Bound YDB MERGE JDBC batches