@@ -32,16 +32,15 @@ import java.sql.PreparedStatement;
 import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.RejectedExecutionException;
-import java.util.stream.IntStream;
 
 import static com.google.common.collect.ImmutableSet.toImmutableSet;
 import static io.trino.plugin.jdbc.JdbcErrorCode.JDBC_ERROR;
+import static io.trino.plugin.jdbc.JdbcWriteSessionProperties.getWriteBatchSize;
 import static io.trino.spi.type.IntegerType.INTEGER;
 import static io.trino.spi.type.TinyintType.TINYINT;
 import static java.util.concurrent.CompletableFuture.completedFuture;
@@ -49,8 +48,8 @@ import static java.util.concurrent.CompletableFuture.completedFuture;
 /*
   Code partly borrowed from JdbcMergeSink. Key differences are:
   - We do not write into the target table on each storeMergedRows call; instead, we store the necessary pages
-    and write everything at once when finish() is called. Without it, I had serious atomicity problems and flaky tests.
-  - We retry in case YDB returns a retryable exception on an update attempt.
+    and apply them in one transaction when finish() is called. Without it, I had serious atomicity problems and flaky tests.
+  - We retry the complete transaction after a retryable pre-commit YDB failure.
   - We do not use temporary tables unlike base Trino implementation, but write straight to YDB target.
  */
 public class YdbMergeSink implements ConnectorMergeSink {
@@ -59,6 +58,7 @@ public class YdbMergeSink implements ConnectorMergeSink {
     private final JdbcClient jdbcClient;
     private final ConnectorPageSinkId pageSinkId;
     private final RemoteQueryModifier remoteQueryModifier;
+    private final int maxBatchSize;
 
     private final List<Page> bufferedPages = new ArrayList<>();
     private boolean finished = false;
@@ -77,6 +77,7 @@ public class YdbMergeSink implements ConnectorMergeSink {
         this.jdbcClient = jdbcClient;
         this.pageSinkId = pageSinkId;
         this.remoteQueryModifier = remoteQueryModifier;
+        this.maxBatchSize = getWriteBatchSize(session);
     }
 
     @Override
@@ -90,7 +91,15 @@ public class YdbMergeSink implements ConnectorMergeSink {
     @Override
     public CompletableFuture<Collection<Slice>> finish() {
         finished = true;
+        try {
+            return finishWithRetry();
+        }
+        finally {
+            bufferedPages.clear();
+        }
+    }
 
+    private CompletableFuture<Collection<Slice>> finishWithRetry() {
         int maxAttempts = 10;
         Exception lastException = null;
 
@@ -182,36 +191,24 @@ public class YdbMergeSink implements ConnectorMergeSink {
     private void executeMergeInTransaction(Connection connection) throws SQLException {
         JdbcOutputTableHandle outputHandle = mergeHandle.getOutputTableHandle();
         List<JdbcColumnHandle> primaryKeys = mergeHandle.getPrimaryKeys();
-
         int columnCount = outputHandle.getColumnNames().size();
         List<JdbcColumnHandle> columns = mergeHandle.getDataColumns();
 
-        List<Page> insertPages = new ArrayList<>();
-        List<Page> deletePages = new ArrayList<>();
-        Map<Integer, List<Page>> updatePagesByCase = new HashMap<>();
-
-        for (Page page : bufferedPages) {
-            separateMergeOperations(page, columnCount, insertPages, deletePages, updatePagesByCase, columns);
-        }
-
-        if (!deletePages.isEmpty()) {
-            executeDeleteOperations(connection, deletePages, primaryKeys);
-        }
-
-        if (!updatePagesByCase.isEmpty()) {
-            executeUpdateOperations(connection, updatePagesByCase, primaryKeys, columns);
-        }
-
-        if (!insertPages.isEmpty()) {
-            executeInsertOperations(connection, insertPages, outputHandle);
-        }
+        validateMergeOperations(columnCount);
+        executeDeleteOperations(connection, primaryKeys, columnCount);
+        executeUpdateOperations(connection, primaryKeys, columns, columnCount);
+        executeInsertOperations(connection, outputHandle, columnCount);
     }
 
     private void executeDeleteOperations(
             Connection connection,
-            List<Page> deletePages,
-            List<JdbcColumnHandle> primaryKeys
+            List<JdbcColumnHandle> primaryKeys,
+            int columnCount
     ) throws SQLException {
+        if (!containsOperation(columnCount, DELETE_OPERATION_NUMBER)) {
+            return;
+        }
+
         String tableName = mergeHandle.getTableHandle().getRequiredNamedRelation().getRemoteTableName().getTableName();
         StringBuilder deleteSql = new StringBuilder("DELETE FROM ");
         deleteSql.append(jdbcClient.quoted(tableName));
@@ -227,37 +224,59 @@ public class YdbMergeSink implements ConnectorMergeSink {
         }
 
         String sql = remoteQueryModifier.apply(session, deleteSql.toString());
+        List<Type> primaryKeyTypes = primaryKeys.stream()
+                .map(JdbcColumnHandle::getColumnType)
+                .toList();
+        List<WriteFunction> primaryKeyWriters = getColumnWriters(primaryKeyTypes);
 
         try (PreparedStatement stmt = connection.prepareStatement(sql)) {
-            for (Page page : deletePages) {
+            int batchSize = 0;
+            for (Page page : bufferedPages) {
+                Block operationBlock = page.getBlock(columnCount);
+                List<Block> rowIdFields = null;
                 for (int pos = 0; pos < page.getPositionCount(); pos++) {
-                    for (int i = 0; i < primaryKeys.size(); i++) {
-                        Block block = page.getBlock(i);
-                        Type type = primaryKeys.get(i).getColumnType();
-                        WriteFunction writer = jdbcClient.toWriteMapping(session, type).getWriteFunction();
-                        setParameter(stmt, i + 1, block, pos, type, writer);
+                    if (TINYINT.getByte(operationBlock, pos) != DELETE_OPERATION_NUMBER) {
+                        continue;
                     }
-                    stmt.addBatch();
+                    if (rowIdFields == null) {
+                        rowIdFields = RowBlock.getRowFieldsFromBlock(page.getBlock(columnCount + 2));
+                    }
+                    for (int i = 0; i < primaryKeys.size(); i++) {
+                        setParameter(
+                                stmt,
+                                i + 1,
+                                rowIdFields.get(i),
+                                pos,
+                                primaryKeyTypes.get(i),
+                                primaryKeyWriters.get(i));
+                    }
+                    batchSize = addToBatch(stmt, batchSize);
                 }
             }
-            stmt.executeBatch();
+            executeRemainingBatch(stmt, batchSize);
         }
     }
 
     private void executeUpdateOperations(
             Connection connection,
-            Map<Integer, List<Page>> updatePagesByCase,
             List<JdbcColumnHandle> primaryKeys,
-            List<JdbcColumnHandle> columns
+            List<JdbcColumnHandle> columns,
+            int columnCount
     ) throws SQLException {
+        if (!containsOperation(columnCount, UPDATE_OPERATION_NUMBER)) {
+            return;
+        }
+
         String tableName = mergeHandle.getTableHandle().getRequiredNamedRelation().getRemoteTableName().getTableName();
+        List<Type> primaryKeyTypes = primaryKeys.stream()
+                .map(JdbcColumnHandle::getColumnType)
+                .toList();
+        List<WriteFunction> primaryKeyWriters = getColumnWriters(primaryKeyTypes);
 
-        for (Map.Entry<Integer, List<Page>> entry : updatePagesByCase.entrySet()) {
+        for (Map.Entry<Integer, Collection<ColumnHandle>> entry : mergeHandle.getUpdateCaseColumns().entrySet()) {
             int caseNumber = entry.getKey();
-            List<Page> pages = entry.getValue();
-
-            Collection<ColumnHandle> updateColumns = mergeHandle.getUpdateCaseColumns().get(caseNumber);
-            if (updateColumns == null || updateColumns.isEmpty()) {
+            Collection<ColumnHandle> updateColumns = entry.getValue();
+            if (updateColumns == null || updateColumns.isEmpty() || !containsUpdateCase(columnCount, caseNumber)) {
                 continue;
             }
 
@@ -270,9 +289,11 @@ public class YdbMergeSink implements ConnectorMergeSink {
                     .map(columns::indexOf)
                     .collect(toImmutableSet());
 
+            List<Integer> updateChannels = new ArrayList<>();
             List<JdbcColumnHandle> updateColumnList = new ArrayList<>();
             for (int channel = 0; channel < columns.size(); channel++) {
                 if (updateChannelsSet.contains(channel)) {
+                    updateChannels.add(channel);
                     updateColumnList.add(columns.get(channel));
                 }
             }
@@ -297,145 +318,151 @@ public class YdbMergeSink implements ConnectorMergeSink {
             }
 
             String sql = remoteQueryModifier.apply(session, updateSql.toString());
+            List<Type> updateColumnTypes = updateColumnList.stream()
+                    .map(JdbcColumnHandle::getColumnType)
+                    .toList();
+            List<WriteFunction> updateColumnWriters = getColumnWriters(updateColumnTypes);
 
             try (PreparedStatement stmt = connection.prepareStatement(sql)) {
-                for (Page page : pages) {
+                int batchSize = 0;
+                for (Page page : bufferedPages) {
+                    Block operationBlock = page.getBlock(columnCount);
+                    Block updateCaseBlock = page.getBlock(columnCount + 1);
+                    List<Block> rowIdFields = null;
                     for (int pos = 0; pos < page.getPositionCount(); pos++) {
+                        if (TINYINT.getByte(operationBlock, pos) != UPDATE_OPERATION_NUMBER ||
+                                INTEGER.getInt(updateCaseBlock, pos) != caseNumber) {
+                            continue;
+                        }
+                        if (rowIdFields == null) {
+                            rowIdFields = RowBlock.getRowFieldsFromBlock(page.getBlock(columnCount + 2));
+                        }
                         for (int i = 0; i < updateColumnList.size(); i++) {
-                            Block block = page.getBlock(i);
-                            Type type = updateColumnList.get(i).getColumnType();
-                            WriteFunction writer = jdbcClient.toWriteMapping(session, type).getWriteFunction();
-                            setParameter(stmt, i + 1, block, pos, type, writer);
+                            setParameter(
+                                    stmt,
+                                    i + 1,
+                                    page.getBlock(updateChannels.get(i)),
+                                    pos,
+                                    updateColumnTypes.get(i),
+                                    updateColumnWriters.get(i));
                         }
 
                         int offset = updateColumnList.size();
                         for (int i = 0; i < primaryKeys.size(); i++) {
-                            Block block = page.getBlock(offset + i);
-                            Type type = primaryKeys.get(i).getColumnType();
-                            WriteFunction writer = jdbcClient.toWriteMapping(session, type).getWriteFunction();
-                            setParameter(stmt, offset + i + 1, block, pos, type, writer);
+                            setParameter(
+                                    stmt,
+                                    offset + i + 1,
+                                    rowIdFields.get(i),
+                                    pos,
+                                    primaryKeyTypes.get(i),
+                                    primaryKeyWriters.get(i));
                         }
-                        stmt.addBatch();
+                        batchSize = addToBatch(stmt, batchSize);
                     }
                 }
-                stmt.executeBatch();
+                executeRemainingBatch(stmt, batchSize);
             }
         }
     }
 
     private void executeInsertOperations(
             Connection connection,
-            List<Page> insertPages,
-            JdbcOutputTableHandle outputHandle
+            JdbcOutputTableHandle outputHandle,
+            int columnCount
     ) throws SQLException {
+        if (!containsOperation(columnCount, INSERT_OPERATION_NUMBER)) {
+            return;
+        }
+
         List<Type> columnTypes = outputHandle.getColumnTypes();
         List<WriteFunction> columnWriters = getColumnWriters(columnTypes);
         String insertSql = jdbcClient.buildInsertSql(outputHandle, columnWriters);
         insertSql = remoteQueryModifier.apply(session, insertSql);
 
         try (PreparedStatement insertStmt = connection.prepareStatement(insertSql)) {
-            int columnCount = outputHandle.getColumnNames().size();
-
-            for (Page page : insertPages) {
+            int batchSize = 0;
+            for (Page page : bufferedPages) {
+                Block operationBlock = page.getBlock(columnCount);
                 for (int pos = 0; pos < page.getPositionCount(); pos++) {
+                    if (TINYINT.getByte(operationBlock, pos) != INSERT_OPERATION_NUMBER) {
+                        continue;
+                    }
                     for (int channel = 0; channel < columnCount; channel++) {
                         setParameter(insertStmt, channel + 1, page.getBlock(channel), pos, columnTypes.get(channel), columnWriters.get(channel));
                     }
-                    insertStmt.addBatch();
+                    batchSize = addToBatch(insertStmt, batchSize);
                 }
             }
-            insertStmt.executeBatch();
+            executeRemainingBatch(insertStmt, batchSize);
         }
     }
 
-    private void separateMergeOperations(
-            Page page,
-            int columnCount,
-            List<Page> insertPages,
-            List<Page> deletePages,
-            Map<Integer, List<Page>> updatePagesByCase,
-            List<JdbcColumnHandle> columns
-    ) {
-        Block operationBlock = page.getBlock(columnCount);
-        Block updateCaseBlock = page.getBlock(columnCount + 1);
-
-        List<Integer> insertPositions = new ArrayList<>();
-        List<Integer> deletePositions = new ArrayList<>();
-        Map<Integer, List<Integer>> updatePositionsByCase = new HashMap<>();
-
-        for (int pos = 0; pos < page.getPositionCount(); pos++) {
-            int operation = TINYINT.getByte(operationBlock, pos);
-            switch (operation) {
-                case INSERT_OPERATION_NUMBER -> insertPositions.add(pos);
-                case DELETE_OPERATION_NUMBER -> deletePositions.add(pos);
-                case UPDATE_OPERATION_NUMBER -> {
-                    int caseNumber = INTEGER.getInt(updateCaseBlock, pos);
-                    updatePositionsByCase.computeIfAbsent(caseNumber, _ -> new ArrayList<>()).add(pos);
-                }
-                default -> throw new IllegalStateException();
-            }
-        }
-
-        if (!insertPositions.isEmpty()) {
-            int[] positions = insertPositions.stream().mapToInt(Integer::intValue).toArray();
-            Page insertData = page.getColumns(IntStream.range(0, columnCount).toArray())
-                    .getPositions(positions, 0, positions.length);
-            insertPages.add(insertData);
-        }
-
-        if (!deletePositions.isEmpty()) {
-            int[] positions = deletePositions.stream().mapToInt(Integer::intValue).toArray();
-            Block rowIdBlock = page.getBlock(columnCount + 2);
-            List<Block> rowIdFields = RowBlock.getRowFieldsFromBlock(rowIdBlock);
-            Block[] deleteBlocks = new Block[rowIdFields.size()];
-            for (int i = 0; i < rowIdFields.size(); i++) {
-                deleteBlocks[i] = rowIdFields.get(i).getPositions(positions, 0, positions.length);
-            }
-            deletePages.add(new Page(positions.length, deleteBlocks));
-        }
-
-        for (Map.Entry<Integer, List<Integer>> entry : updatePositionsByCase.entrySet()) {
-            int caseNumber = entry.getKey();
-            int[] positions = entry.getValue().stream().mapToInt(Integer::intValue).toArray();
-
-            Collection<ColumnHandle> updateColumns = mergeHandle.getUpdateCaseColumns().get(caseNumber);
-            if (updateColumns == null) continue;
-
-            Set<Integer> updateChannelsSet = updateColumns.stream()
-                    .map(JdbcColumnHandle.class::cast)
-                    .map(columns::indexOf)
-                    .collect(toImmutableSet());
-
-            List<Integer> updateChannelsList = new ArrayList<>();
-            for (int channel = 0; channel < columns.size(); channel++) {
-                if (updateChannelsSet.contains(channel)) {
-                    updateChannelsList.add(channel);
+    private void validateMergeOperations(int columnCount) {
+        for (Page page : bufferedPages) {
+            Block operationBlock = page.getBlock(columnCount);
+            Block updateCaseBlock = page.getBlock(columnCount + 1);
+            for (int position = 0; position < page.getPositionCount(); position++) {
+                switch (TINYINT.getByte(operationBlock, position)) {
+                    case INSERT_OPERATION_NUMBER, DELETE_OPERATION_NUMBER -> {}
+                    case UPDATE_OPERATION_NUMBER -> {
+                        int caseNumber = INTEGER.getInt(updateCaseBlock, position);
+                        Collection<ColumnHandle> updateColumns = mergeHandle.getUpdateCaseColumns().get(caseNumber);
+                        if (updateColumns == null || updateColumns.isEmpty()) {
+                            throw new IllegalStateException("No columns for MERGE update case " + caseNumber);
+                        }
+                    }
+                    default -> throw new IllegalStateException();
                 }
             }
+        }
+    }
 
-            int[] updateChannels = updateChannelsList.stream().mapToInt(Integer::intValue).toArray();
-
-            Block rowIdBlock = page.getBlock(columnCount + 2);
-            List<Block> rowIdFields = RowBlock.getRowFieldsFromBlock(rowIdBlock);
-            Block[] updateBlocks = new Block[updateChannels.length + rowIdFields.size()];
-
-            int blockIdx = 0;
-            for (int channel : updateChannels) {
-                updateBlocks[blockIdx++] = page.getBlock(channel).getPositions(positions, 0, positions.length);
+    private boolean containsOperation(int columnCount, int expectedOperation) {
+        for (Page page : bufferedPages) {
+            Block operationBlock = page.getBlock(columnCount);
+            for (int position = 0; position < page.getPositionCount(); position++) {
+                if (TINYINT.getByte(operationBlock, position) == expectedOperation) {
+                    return true;
+                }
             }
-            for (Block rowIdField : rowIdFields) {
-                updateBlocks[blockIdx++] = rowIdField.getPositions(positions, 0, positions.length);
-            }
+        }
+        return false;
+    }
 
-            updatePagesByCase.computeIfAbsent(caseNumber, _ -> new ArrayList<>())
-                    .add(new Page(positions.length, updateBlocks));
+    private boolean containsUpdateCase(int columnCount, int expectedCase) {
+        for (Page page : bufferedPages) {
+            Block operationBlock = page.getBlock(columnCount);
+            Block updateCaseBlock = page.getBlock(columnCount + 1);
+            for (int position = 0; position < page.getPositionCount(); position++) {
+                if (TINYINT.getByte(operationBlock, position) == UPDATE_OPERATION_NUMBER &&
+                        INTEGER.getInt(updateCaseBlock, position) == expectedCase) {
+                    return true;
+                }
+            }
+        }
+        return false;
+    }
+
+    private int addToBatch(PreparedStatement statement, int batchSize) throws SQLException {
+        statement.addBatch();
+        batchSize++;
+        if (batchSize == maxBatchSize) {
+            statement.executeBatch();
+            return 0;
+        }
+        return batchSize;
+    }
+
+    private static void executeRemainingBatch(PreparedStatement statement, int batchSize) throws SQLException {
+        if (batchSize > 0) {
+            statement.executeBatch();
         }
     }
 
     private List<WriteFunction> getColumnWriters(List<Type> columnTypes) {
         return columnTypes.stream()
                 .map(type -> jdbcClient.toWriteMapping(session, type).getWriteFunction())
-                .collect(java.util.stream.Collectors.toList());
+                .toList();
     }
 
     private void setParameter(PreparedStatement stmt, int index, Block block, int position, Type type, WriteFunction writer) throws SQLException {
